# fairmi-framework

./: .gitignore  LICENSE  download.py  pyproject.toml
src/: config.py  main.py
src/datamodule/datacuration/: __init__.py  clusters.py  group.py  hierarchical_kmeans_gpu.py  hierarchical_sampling.py  kmeans_gpu.py  utils.py
src/datamodule/dataset/: __init__.py  base.py  dataset.py
src/datamodule/dataset/chest/: __init__.py  brax.py  chexpert.py
src/datamodule/dataset/natural/: __init__.py  celeba.py
src/datamodule/dataset/skin/: __init__.py  ham10000.py
src/datamodule/dataset/vision/: __init__.py  brset.py  odir.py
src/dataset/: brset.py  papila.py
src/model/classification/: __init__.py  base.py
src/model/classification/transformer/: __init__.py  vit.py
src/model/extractor/: __init__.py  embeddings.py
src/model/utils/: __init__.py
src/model/utils/loss/: fair.py
src/projects/group_similarity/: config.py  download.py  embeddings.py  groups.py  test.ipynb
src/scaling_laws/utils/: evaluate.py  metric.py
test/: README.md  pytest.ini
test/datamodule/dataset/: base.py  test_brax.py  test_brset.py  test_chexpert.py  test_ham10000.py  test_odir.py
test/model/: test_extractor.py
