[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fairmi"
version = "0.0.1"
authors = [
  { name="Dilermando QUeiroz Neto", email="dilermando.queiroz@unifesp.br" },
]
description = "FairMI – Impartiality in Machine Learning with Application in Medical Images"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/project-fairmi/fairmi"
Issues = "https://github.com/project-fairmi/fairmi/issues"