[project]
name = "fairmi-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fairret>=0.1.3",
    "ipykernel>=7.1.0",
    "lightning>=2.5.5",
    "matplotlib>=3.10.7",
    "open-clip-torch>=3.2.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "timm>=1.0.21",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]
